objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_Age__c</fullName>
        <label>Contact Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_backpro_field__c</fullName>
        <label>test backpro field</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_con_4_update__c</fullName>
        <label>test con 4 update</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>CRM_Work</fullName>
        <active>true</active>
        <label>CRM Work</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_Work_SE</fullName>
        <active>true</active>
        <label>CRM Work SE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Contact</fullName>
        <active>false</active>
        <label>Technical Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>X360_Connect_Contact</fullName>
        <active>true</active>
        <label>X360 Connect Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>